CEA-13: Fix